# fir-window

./: .FIRwindow.cpp.swp  .FIRwindow.h.swp  .gitignore  CMakeLists.txt  FIRwindow.cpp  FIRwindow.h  Makefile  README.md  fir-window.cpp  fir-window.h  widget.cpp  widget.hpp
legacy/: README
testing/: FIRwindow.cpp  FIRwindow.h  Makefile
